Alignment fix for the labels of translated fields in the backoffice

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -686,6 +686,10 @@ body.modal {
     margin-bottom: 1em;
 }
 
+.BackOfficeLayout .Form div.field.translated .field_label {
+    padding: 0.2em;
+}
+
 .BackOfficeLayout .Form div.field:after {
     content: ".";
     display: block;
